# paris-silence-market

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: final_dataset_ready.parquet
src/app/: app.py
src/ingestion/: fetch_dvf.py  fetch_noise.py
src/processing/: match_noise.py
